Source .vscode/.env for playground, too
This will help us redirect to the right app domain for signups.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,8 +9,7 @@
 		},
 		{
 			"type": "shell",
-			"command": "npm",
-			"args": ["run", "dev"],
+			"command": "set -a; source ${workspaceFolder}/.vscode/.env; npm run dev",
 			"problemMatcher": [],
 			"label": "npm: dev (playground)",
 			"options": {
