--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,6 +55,12 @@ jobs:
 
           export VITE_ARCHODEX_REGIONS=$(aws ssm get-parameter --name "customer_data_regions" --query "Parameter.Value" --output text)
 
+          export VITE_ARCHODEX_DOMAIN=$(aws ssm get-parameter --name "/account_subdomain/domain" --query "Parameter.Value" --output text)
+
+          if [ "${VITE_ARCHODEX_DOMAIN}" != "archodex.com" ]; then
+            echo "::add-mask::${VITE_ARCHODEX_DOMAIN}"
+          fi
+
           npm ci
           npm run build
 
