--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -42,7 +42,7 @@
 		},
 		{
       "type": "shell",
-      "command": "act --platform ubuntu-latest=catthehacker/ubuntu:act-24.04 --container-architecture linux/arm64 --bind --env-file <(aws configure export-credentials --format env --profile=archodex-dev-AdministratorAccess) --use-new-action-cache --reuse --job deploy",
+      "command": "act --platform ubuntu-latest=catthehacker/ubuntu:act-24.04 --container-architecture linux/arm64 --env-file <(aws configure export-credentials --format env --profile=archodex-dev-AdministratorAccess) --use-new-action-cache --reuse --job deploy",
       "problemMatcher": [],
       "group": {
         "kind": "build"
